; ModuleID = '/home/carl/AnghaBench/Cinder/src/libtess2/extr_bucketalloc.c_createBucketAlloc.c'
source_filename = "/home/carl/AnghaBench/Cinder/src/libtess2/extr_bucketalloc.c_createBucketAlloc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.BucketAlloc = type { i8*, i32, i32, i64, i64, %struct.TYPE_3__* }
%struct.TYPE_3__ = type { i32, i32 (i32, %struct.BucketAlloc*)*, i64 (i32, i32)* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.BucketAlloc* @createBucketAlloc(%struct.TYPE_3__* %0, i8* %1, i32 %2, i32 %3) #0 {
  %5 = alloca %struct.BucketAlloc*, align 8
  %6 = alloca %struct.TYPE_3__*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca %struct.BucketAlloc*, align 8
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %6, align 8
  store i8* %1, i8** %7, align 8
  store i32 %2, i32* %8, align 4
  store i32 %3, i32* %9, align 4
  %11 = load %struct.TYPE_3__*, %struct.TYPE_3__** %6, align 8
  %12 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %11, i32 0, i32 2
  %13 = load i64 (i32, i32)*, i64 (i32, i32)** %12, align 8
  %14 = load %struct.TYPE_3__*, %struct.TYPE_3__** %6, align 8
  %15 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %14, i32 0, i32 0
  %16 = load i32, i32* %15, align 8
  %17 = call i64 %13(i32 %16, i32 40)
  %18 = inttoptr i64 %17 to %struct.BucketAlloc*
  store %struct.BucketAlloc* %18, %struct.BucketAlloc** %10, align 8
  %19 = load %struct.TYPE_3__*, %struct.TYPE_3__** %6, align 8
  %20 = load %struct.BucketAlloc*, %struct.BucketAlloc** %10, align 8
  %21 = getelementptr inbounds %struct.BucketAlloc, %struct.BucketAlloc* %20, i32 0, i32 5
  store %struct.TYPE_3__* %19, %struct.TYPE_3__** %21, align 8
  %22 = load i8*, i8** %7, align 8
  %23 = load %struct.BucketAlloc*, %struct.BucketAlloc** %10, align 8
  %24 = getelementptr inbounds %struct.BucketAlloc, %struct.BucketAlloc* %23, i32 0, i32 0
  store i8* %22, i8** %24, align 8
  %25 = load i32, i32* %8, align 4
  %26 = load %struct.BucketAlloc*, %struct.BucketAlloc** %10, align 8
  %27 = getelementptr inbounds %struct.BucketAlloc, %struct.BucketAlloc* %26, i32 0, i32 1
  store i32 %25, i32* %27, align 8
  %28 = load %struct.BucketAlloc*, %struct.BucketAlloc** %10, align 8
  %29 = getelementptr inbounds %struct.BucketAlloc, %struct.BucketAlloc* %28, i32 0, i32 1
  %30 = load i32, i32* %29, align 8
  %31 = zext i32 %30 to i64
  %32 = icmp ult i64 %31, 8
  br i1 %32, label %33, label %36

33:                                               ; preds = %4
  %34 = load %struct.BucketAlloc*, %struct.BucketAlloc** %10, align 8
  %35 = getelementptr inbounds %struct.BucketAlloc, %struct.BucketAlloc* %34, i32 0, i32 1
  store i32 8, i32* %35, align 8
  br label %36

36:                                               ; preds = %33, %4
  %37 = load i32, i32* %9, align 4
  %38 = load %struct.BucketAlloc*, %struct.BucketAlloc** %10, align 8
  %39 = getelementptr inbounds %struct.BucketAlloc, %struct.BucketAlloc* %38, i32 0, i32 2
  store i32 %37, i32* %39, align 4
  %40 = load %struct.BucketAlloc*, %struct.BucketAlloc** %10, align 8
  %41 = getelementptr inbounds %struct.BucketAlloc, %struct.BucketAlloc* %40, i32 0, i32 4
  store i64 0, i64* %41, align 8
  %42 = load %struct.BucketAlloc*, %struct.BucketAlloc** %10, align 8
  %43 = getelementptr inbounds %struct.BucketAlloc, %struct.BucketAlloc* %42, i32 0, i32 3
  store i64 0, i64* %43, align 8
  %44 = load %struct.BucketAlloc*, %struct.BucketAlloc** %10, align 8
  %45 = call i32 @CreateBucket(%struct.BucketAlloc* %44)
  %46 = icmp ne i32 %45, 0
  br i1 %46, label %56, label %47

47:                                               ; preds = %36
  %48 = load %struct.TYPE_3__*, %struct.TYPE_3__** %6, align 8
  %49 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %48, i32 0, i32 1
  %50 = load i32 (i32, %struct.BucketAlloc*)*, i32 (i32, %struct.BucketAlloc*)** %49, align 8
  %51 = load %struct.TYPE_3__*, %struct.TYPE_3__** %6, align 8
  %52 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %51, i32 0, i32 0
  %53 = load i32, i32* %52, align 8
  %54 = load %struct.BucketAlloc*, %struct.BucketAlloc** %10, align 8
  %55 = call i32 %50(i32 %53, %struct.BucketAlloc* %54)
  store %struct.BucketAlloc* null, %struct.BucketAlloc** %5, align 8
  br label %58

56:                                               ; preds = %36
  %57 = load %struct.BucketAlloc*, %struct.BucketAlloc** %10, align 8
  store %struct.BucketAlloc* %57, %struct.BucketAlloc** %5, align 8
  br label %58

58:                                               ; preds = %56, %47
  %59 = load %struct.BucketAlloc*, %struct.BucketAlloc** %5, align 8
  ret %struct.BucketAlloc* %59
}

declare dso_local i32 @CreateBucket(%struct.BucketAlloc*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
